# ratty

./: .gitignore  CMakeLists.txt  build.bat  create.ps1  delete.ps1
admin/: main.cpp
client/: main.cpp
server/: main.cpp
src_client/: main.cpp
src_client/Networking/: ClientManager.cpp  ClientManager.h
src_server/: main.cpp
src_server/Networking/: NetworkManager.cpp  NetworkManager.h  ServerManager.cpp  ServerManager.h
